# llm-canary

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  canary.example.yaml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.omc/state/: agent-replay-1b7975db-48ff-45ca-9c5c-1e6d1f030994.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  subagent-tracking.json
examples/agent-trace/: policy.yaml  trace.jsonl
src/llm_canary/: __init__.py  baseline.py  cli.py  config.py  pricing.py  report.py  runner.py  runner_context.py  semantic.py  server.py  storage.py  trace.py
src/llm_canary/assertions/: __init__.py  basic.py  quality.py
src/llm_canary/providers/: __init__.py  base.py  integration.py  offline.py  remote.py
tests/: test_assertions.py  test_baseline.py  test_cli.py  test_features.py  test_integration_providers.py  test_judge.py  test_providers.py  test_report.py  test_runner.py  test_semantic.py  test_server.py  test_trace.py
