[project]
name = "llm-canary"
version = "0.3.0"
description = "Regression canary for LLM apps: YAML test suites, offline-first assertions, baseline diffing, and agent-trace policy gates for CI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "okssusucha" }]
dependencies = [
    "httpx>=0.27",
    "jsonschema>=4.21",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[dependency-groups]
dev = [
    "fastapi>=0.110",
    "pytest>=8.0",
    "respx>=0.21",
    "ruff>=0.5",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
llm-canary = "llm_canary.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_canary"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
